--- a/flaskapi/requirements.txt
+++ b/flaskapi/requirements.txt
@@ -1,3 +1,6 @@
-Flask
-# miner.six
-numpy
+Flask # BSD-3 allows redistribution
+# miner.six # See README for install # MIT allows redistribution
+numpy # Even more open than MIT allows redistribution
+# tkinter # BSD-3 allow redistribution
+rtee # MIT allows redistribution
+scipy # BSD-3 allow redistribution
