Start extracting symbols for Michael Smith Architects. Lambda function debug configuration

--- a/lambdacontainer/processpdffunction/docker-compose.yml
+++ b/lambdacontainer/processpdffunction/docker-compose.yml
@@ -19,3 +19,4 @@ services:
       AWS_ACCESS_KEY_ID: 'DUMMYIDEXAMPLE'
       AWS_SECRET_ACCESS_KEY: 'DUMMYEXAMPLEKEY'
       AWS_DEFAULT_REGION: 'us-east-1'
+      DEV_LOCAL: "true"
