--- a/lambdacontainer/processpdffunction/Dockerfile
+++ b/lambdacontainer/processpdffunction/Dockerfile
@@ -4,6 +4,7 @@ COPY requirements.txt .
 RUN pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 COPY app.py ${LAMBDA_TASK_ROOT}
+COPY *.py ${LAMBDA_TASK_ROOT}
 
 # Remove below for production
 COPY plan.pdf ${LAMBDA_TASK_ROOT}
