--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.245.0",
     "@mikecousins/react-pdf": "^6.1.1",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
