--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.245.0",
+    "@aws-sdk/client-lambda": "^3.245.0",
     "@mikecousins/react-pdf": "^6.1.1",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
