--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "supabase": "^1.31.1",
     "tailwindcss": "^3.2.4"
   }
 }
