--- a/website/package.json
+++ b/website/package.json
@@ -10,9 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.245.0",
     "@aws-sdk/client-lambda": "^3.245.0",
     "@mikecousins/react-pdf": "^6.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.6",
+    "@supabase/supabase-js": "^2.4.0",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
